--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
+name = "STARX"
 authors = [{name = "James", email = "alvaradx@umich.edu"}]
 dynamic = ["version", "description"]
