--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# swp files
+/docs/source/*.swp
+
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
