--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,11 @@
 version: 2
 
+
+python:
+  install:
+    - requirements: requirements.txt
+
 build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-  jobs:
-    pre_create_environment:
-      - pip3 install sphinx-tabs
