--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,8 @@
 version: 2
 
-
 python:
   install:
-    - requirements: requirements.txt
+    - requirements: docs/requirements.txt
 
 build:
   os: ubuntu-22.04
